--- a/case2/conf.d/default.conf
+++ b/case2/conf.d/default.conf
@@ -3,21 +3,7 @@ server {
     server_name  localhost;
 
     #access_log  /var/log/nginx/host.access.log  main;
-
-    location /app1 {
-        rewrite /app1/(.*) /$1 break;
-        proxy_pass http://app1:8081;
-    }
-
-    location /app2 {
-        rewrite /app2/(.*) /$1 break;
-        proxy_pass http://app2:8082;
-    }
-
-    location /app3 {
-        rewrite /app3/(.*) /$1 break;
-        proxy_pass http://app3:8083;
-    }
+    include /etc/nginx/sites-enable/*.conf;
 
     #error_page  404              /404.html;
 
